--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   style="width: 100%;border-radius:0;margin:0;border: none;padding: 20px;background: #3d3d3d;color: #f3f2eb;font-size: 13px;line-height: 1.2em;letter-spacing: 0;text-shadow:none;">
                   <h2
                      style="margin: 0;font-size:36px;letter-spacing:.1em;line-height:.9em;font-family:'texgyreadventorregular';">
-                     Checkpoint Downloads <br>
+                     Checkpoint Downloads <br/>
                      <span
                         style="font-size:23px;letter-spacing:.3em;font-family:'texgyreadventorbold';text-indent:-0.4em;display:inline-block;">For
                      Community Leaders</span>
@@ -246,13 +246,15 @@
             ©2023 PoGo Community Checkpoint | All Rights Reserved | <a href="https://twitter.com/PoGoCheckpoint"
                target="_blank">@PoGoCheckpoint</a> | <a href="https://pogo.community"
                target="_blank">PoGo.Community</a>
-            <br>
+            <br/>
             Pokémon And All Respective Names are Trademark &amp; © of Nintendo 1996-2018
-            <br>
+            <br/>
             Pokémon GO is Trademark &amp; © of Niantic, Inc.
-            <br>
+            <br/>
             PoGo Community Checkpoint is not affiliated with The Silph Road LLC, Niantic Inc., The Pokemon Company, or Nintendo.
-            <br>
+            <br/>
+            This website is a <a href="https://docs.github.com/en/get-started/quickstart/fork-a-repo">fork</a>of the original <a href="https://github.com/SilphRoad/silph-league">Silph League assets site</a>, with respect to the <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE">Attribution-NonCommercial-ShareAlike 4.0 International license</a> it was published under, visual similarities should not imply any sort of relationship or endorsement by The Silph Road or any of its collaborators
+            <br/>
             For inquiries, contact <a href="mailto:checkpoint@pogo.community">checkpoint@pogo.community</a>
          </div>
       </div>
