Added Google Forms section with Community Day feedback form

--- a/index.html
+++ b/index.html
@@ -70,11 +70,15 @@
                          <label>
                            <input type="radio" name="type" value="community-day">
                            <span>Community Day</span>
-                         </label>
-                         <label>
-                           <input type="radio" name="type" value="external-assets">
-                           <span>External Asset Resources</span>
-                         </label>
+                        </label>
+                        <label>
+                          <input type="radio" name="type" value="general">
+                          <span>General</span>
+                        </label>
+                        <label>
+                          <input type="radio" name="type" value="external-assets">
+                          <span>External Asset Resources</span>
+                        </label>
                        </div>
                      </div>
                      <div class="filter-section">
@@ -175,6 +179,36 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Axew Day -->
+                     <!-- Start Feedback Form Templates -->
+                     <div class="asset-section" data-type="general">
+                        <h5>General Asset: <span style="font-family:'texgyreadventorregular';">Google Form Feedback Templates
+                        </p>
+                        <div class="assetGroup">
+
+                           <div class="asset">
+                              <a href="https://docs.google.com/forms/d/1pOY4LgDfd0nBpiDqlUEnMKfy4nT1qOra4d4852zVfWA/copy" target="_blank">
+                              <img src="./assets/general/cdayfeedbackform.png" alt="Screenshot of the form. Screenshot reads as follows: Community Day Feedback
+                              We want to hear your feedback so we can keep improving our logistics and content. Please
+                              fill this quick survey and let us know your thoughts (your answers will be anonymous).
+                              Switch account
+                              * Indicates required question
+                              What is your Home play area? *
+                              C) [Location)
+                              C) Other:
+                              Where did you go for Community Day? *
+                              C) [Location]
+                              C) Other:">
+                              <div class="asset-label">
+                                 <img src="https://ssl.gstatic.com/docs/spreadsheets/forms/favicon_qp2.png" alt="Google Forms Label">
+                              </div>
+                              <label>Community Day Feedback Form</label>
+                              </a>
+                              <p>This for template was made by <a href="https://social.pogo.community/@forte">Forte</a> and has been used every month in the <a href="https://7pidgeys.pogo.community">7Pidgeys community</a> to help fine tune their events. You can view <a href="https://docs.google.com/forms/d/1pOY4LgDfd0nBpiDqlUEnMKfy4nT1qOra4d4852zVfWA/copy">a live sample of the form here</a> if you want to see it before you copy it</p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Feedback Form Templates -->
                      <!-- Start keridel's Keychains -->
                      <div class="asset-section" data-type="external">
                         <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel">keridel's</a> Team Keychains</span></h5>
