fixed missing tags

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                      <!-- End Axew Day -->
                      <!-- Start Feedback Form Templates -->
                      <div class="asset-section" data-type="general">
-                        <h5>General Asset: <span style="font-family:'texgyreadventorregular';">Google Form Feedback Templates
-                        </p>
+                        <h5>General Asset: <span style="font-family:'texgyreadventorregular';">Google Form Feedback Templates</span></h5>
+                        <p>These are a collection of Google Forms templates that can help you gather information from your community. If you have any problems with trying to use these forms reach out to us in our <a href="https://discord.gg/FUa35xeYUn" target="_blank">Discord Server's</a> #help channel</p>
                         <div class="assetGroup">
 
                            <div class="asset">
@@ -203,7 +203,7 @@
                               </div>
                               <label>Community Day Feedback Form</label>
                               </a>
-                              <p>This for template was made by <a href="https://social.pogo.community/@forte">Forte</a> and has been used every month in the <a href="https://7pidgeys.pogo.community">7Pidgeys community</a> to help fine tune their events. You can view <a href="https://docs.google.com/forms/d/1pOY4LgDfd0nBpiDqlUEnMKfy4nT1qOra4d4852zVfWA/copy">a live sample of the form here</a> if you want to see it before you copy it</p>
+                              <p>This for template was made by <a href="https://social.pogo.community/@forte" target="_blank">Forte</a> and has been used every month in the <a href="https://7pidgeys.pogo.community" target="_blank">7Pidgeys community</a> to help fine tune their events. You can view <a href="https://docs.google.com/forms/d/e/1FAIpQLSccrCs10iq8KPxqa5YDJwZCZGkjoeTgtj6ofhuKqTV4IXXoYQ/viewform" target="_blank">a live sample of the form here</a> if you want to see it before you copy it</p>
                            </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
@@ -211,8 +211,9 @@
                      <!-- End Feedback Form Templates -->
                      <!-- Start keridel's Keychains -->
                      <div class="asset-section" data-type="external">
-                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel">keridel's</a> Team Keychains</span></h5>
-                        <p>A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
+                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel" target="_blank>keridel's</a> Team Keychains</span></h5>
+                        <p>
+                           A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
                         </p>
                         <div class="assetGroup">
 
@@ -287,7 +288,7 @@
             <br/>
             PoGo Community Checkpoint is not affiliated with The Silph Road LLC, Niantic Inc., The Pokemon Company, or Nintendo.
             <br/>
-            This website is a <a href="https://docs.github.com/en/get-started/quickstart/fork-a-repo">fork</a>of the original <a href="https://github.com/SilphRoad/silph-league">Silph League assets site</a>, with respect to the <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE">Attribution-NonCommercial-ShareAlike 4.0 International license</a> it was published under, visual similarities should not imply any sort of relationship or endorsement by The Silph Road or any of its collaborators
+            This website is a <a href="https://docs.github.com/en/get-started/quickstart/fork-a-repo">fork</a>of the original <a href="https://github.com/SilphRoad/silph-league" target="_blank">Silph League assets site</a>, with respect to the <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE">Attribution-NonCommercial-ShareAlike 4.0 International license</a> it was published under, visual similarities should not imply any sort of relationship or endorsement by The Silph Road or any of its collaborators
             <br/>
             For inquiries, contact <a href="mailto:checkpoint@pogo.community">checkpoint@pogo.community</a>
          </div>
