fixed missing quote

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                      <!-- End Feedback Form Templates -->
                      <!-- Start keridel's Keychains -->
                      <div class="asset-section" data-type="external">
-                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel" target="_blank>keridel's</a> Team Keychains</span></h5>
+                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel" target="_blank">keridel's</a> Team Keychains</span></h5>
                         <p>
                            A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
                         </p>
