Removed more lowry art, and added the GymBadge icons

--- a/index.html
+++ b/index.html
@@ -175,6 +175,17 @@
                                     <label>Google Drive Asset Folder (Contains more alternative versions)</label>
                               </a>
                            </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/501452-axew-community-day-coin-june-2023" target="_blank">
+                                    <img src="./assets/2023/2023-06-10-community-day/GymBadgeAxewThumbnail.png">
+                                    <div class="asset-label">
+                                       <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                                    </div><label>Axew 2023 Gym Badges</label>
+                              </a>
+                              <p>
+                                 Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
