Added Submission form

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                   <p>
                     Notice: This project has no affailation with The Silph Road. We're fans of TSR, and are saddened by their sunset. In order to give community organizers a new home to find assets to promote their event as quickly as possible we <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE" target="_blank">forked their assets repo</a> so we could quickly get this website up for community leaders who had come to rely on monthly assets and in the coming months we will be changing more and more to clearly diferentiate us!
                   </p>
+                  <p>This resource is a volunteer project from passionate fans, if you'd like to contribute to this effort share your asset to <a href="https://discord.com/channels/356458569069101058/1107742441471234118" target="_blank">the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN" target="_blank">Discord server</a>, or submit your assets using <a href="https://assets.pogo.community/ target=")_blank">this submission form</a>. Submissions from the community keeps this project going!</p>
                   <div class="filters">
                      <div class="filter-section">
                        <h3 style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
