Updated the CDay Coin Asset Title & Description

--- a/index.html
+++ b/index.html
@@ -167,8 +167,11 @@
                                     <img src="./assets/2023/2023-06-10-community-day/2023-06-10_PrintedCoin.jpg" class="artistForte modelLink">
                                     <div class="asset-label">
                                        <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
-                                    </div><label>Axew Day Coin by Forte</label>
+                                    </div><label>Axew Day Coin</label>
                               </a>
+                              <p>
+                                 3D Printable Commerative Coin for Axew Community day provided by <a href="https://social.pogo.community/@forte" target="_blank">@Forte</a>
+                              </p>
                            </div>
                            <div>
                               <a href="https://drive.google.com/drive/folders/1-jNqi_mEj8ZuxLC4_Hc0W-XpWVGJDcyn?usp=sharing" target="_blank">
