Added Infographics Section

--- a/index.html
+++ b/index.html
@@ -263,6 +263,22 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End keridel's Keychains -->
+                     <!-- Start Infographics Links -->
+                     <div class="asset-section" data-type="external">
+                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';">Inforgraphics</span></h5>
+                        <p>There's a lot of infrmation regularly being published about in game features and events. In order to helpfully and quickly communicate the important details many in the community publish and share infographics. In this section we're linking to different places around the community to find these Inforgraphics</p>
+                        <div class="assetGroup">
+                           <div>
+                              <a href="https://www.pokebattler.com/raids/infographics" target="_blank">
+                              <img src="./assets/general/pokebattler-infographics.png">
+                              <label>Pokebattler Infographics</label>
+                              </a>
+                              <p>Get your Pokemon Go Raid Infographics from CaptGoldfish and JaceMakings. These infographics are intended for new players and do not include megas or shadow. These raid counters will help you beat the raid boss with the fewest number of trainers!</p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Infographics Links -->
                      <!-- Start Silph Assets -->
                      <div class="asset-section" data-type="external">
                         <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';">Silph Road Assets</span></h5>
