corrected asset type label

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                           <span>General</span>
                         </label>
                         <label>
-                          <input type="radio" name="type" value="external-assets">
+                          <input type="radio" name="type" value="external">
                           <span>External Asset Resources</span>
                         </label>
                        </div>
