Added linked page anchors

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="text-left">
                      <!-- Start Axew Day -->
                      <div class="asset-section" data-type="community-day" data-year="2023">
-                        <h5>Meetup Event: <span style="font-family:'texgyreadventorregular';">June 2023 Community Day</span>
+                        <h5><a class="page-anchor" href="#jun2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">June 2023 Community Day</span>
                         </h5>
                         <h6>PoGo Community Checkpoint's First Ever Asset Drop!</h6>
                         <p>
@@ -226,7 +226,7 @@
                      <!-- End Feedback Form Templates -->
                      <!-- Start keridel's Keychains -->
                      <div class="asset-section" data-type="external">
-                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel" target="_blank">keridel's</a> Team Keychains</span></h5>
+                        <h5><a class="page-anchor" href="#keridelteamkeychain">Asset Resource:</a> <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/@keridel" target="_blank">keridel's</a> Team Keychains</span></h5>
                         <p>
                            A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
                         </p>
@@ -265,7 +265,7 @@
                      <!-- End keridel's Keychains -->
                      <!-- Start Infographics Links -->
                      <div class="asset-section" data-type="external">
-                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';">Inforgraphics</span></h5>
+                        <h5><a class="page-anchor" href="#Infographics">Asset Resource:</a> <span style="font-family:'texgyreadventorregular';">Inforgraphics</span></h5>
                         <p>There's a lot of infrmation regularly being published about in game features and events. In order to helpfully and quickly communicate the important details many in the community publish and share infographics. In this section we're linking to different places around the community to find these Inforgraphics</p>
                         <div class="assetGroup">
                            <div>
@@ -281,7 +281,7 @@
                      <!-- End Infographics Links -->
                      <!-- Start Silph Assets -->
                      <div class="asset-section" data-type="external">
-                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';">Silph Road Assets</span></h5>
+                        <h5><a class="page-anchor" href="#SilphRoadAssets">Asset Resource:</a> <span style="font-family:'texgyreadventorregular';">Silph Road Assets</span></h5>
                         <p>Before The Silph Road announced their sunset, they would regularly publish assets for community leaders to use. While they are no longer publishing assets their previously published assets could still be of use and were published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means you can use the resources however you want as long as it's not for commercial purposes, and that you share alike.</p>
                         <div class="assetGroup">
                            <div>
