fixed centering issue on mobile

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                            </div>
                            <div>
                               <a href="https://drive.google.com/drive/folders/1-jNqi_mEj8ZuxLC4_Hc0W-XpWVGJDcyn?usp=sharing" target="_blank">
-                                    <img src="./img/gdrive-folder-icon.png" class="driveLink">
+                                    <img src="./img/gdrive-folder-icon.png">
                                     <label>Google Drive Asset Folder (Contains more alternative versions)</label>
                               </a>
                            </div>
