Pushing Squirtle Assets

--- a/index.html
+++ b/index.html
@@ -95,6 +95,94 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Squirtle Day Classic -->
+                     <div class="asset-section" data-type="external">
+                        <h5><a class="page-anchor" id="squirtlejune2023" href="#squirtlejune2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Squirtle Community Day Classic (June 9th 2023)</span></h5>
+                        <p>
+                           We've been hearing whispers and rumors for a while, and it turned out to be true! Here's some assets to promote your meetups!
+                        </p>
+                        <div class="assetGroup">
+
+                           <div class="asset">
+                              <a href="./assets/2023/2023-07-09-community-day-classic/OnlyBadge.png" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/OnlyBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="Printables Label">
+                              </div>
+                              <label>Badge</label>
+                              </a>
+                              <p>
+                                 Badge Design: xLuximityx <br />
+                                 Base Template: Former Silph Road<br />
+                                 Blastoise Sprite: Pokémon Company
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2023/2023-07-09-community-day-classic/ShinyBadge.png" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/ShinyBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="Printables Label">
+                              </div>
+                              <label>Badge as Banner</label>
+                              </a>
+                              <p>
+                                 Badge Design: xLuximityx <br />
+                                 Base Template: Former Silph Road<br />
+                                 Blastoise Sprite: Pokémon Company
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2023/2023-07-09-community-day-classic/Extra Border for Button Prints.png" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/Extra Border for Button Prints.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="Printables Label">
+                              </div>
+                              <label>Badge with Extra Border</label>
+                              </a>
+                              <p>
+                                 Extra Border to allow for making buttons with, you should crop this version to fit your needs
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2023/2023-07-09-community-day-classic/ExtraWideForBanners.png" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/ExtraWideForBanners.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG Label">
+                              </div>
+                              <label>Extra Wide Badge</label>
+                              </a>
+                              <p>
+                                 great for social media banners like for Discord or Facebook events
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./https://www.printables.com/model/504670-squirtle-community-day-classic-coin" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/Slicer Preview.png">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Label">
+                              </div>
+                              <label>3D Coin</label>
+                              </a>
+                              <p>
+                                 by <a href="https://social.pogo.community/@forte">Forte</a>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1ZMrmHvHrRvQnHM8x7lj7JroZNP5Zqr0C?usp=sharing" target="_blank">
+                              <img src="./img/gdrive-folder-icon.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Drive Folder</label>
+                              </a>
+                              <p>
+                                 May contain additional assets in differnt formats
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Squirtle Day Classic -->
                      <!-- Start Axew Day -->
                      <div class="asset-section" data-type="community-day" data-year="2023">
                         <h5><a class="page-anchor" href="#jun2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">June 2023 Community Day</span>
