Added Gym Badges

--- a/index.html
+++ b/index.html
@@ -168,6 +168,18 @@
                               </p>
                            </div>
                            <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1EyEBWqXbUG9FtDGmCRTPbpA8o8x4N8i7?usp=sharing" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/Stack.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Gym Badges</label>
+                              </a>
+                              <p>
+                                 Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
+                              </p>
+                           </div>
+                           <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1ZMrmHvHrRvQnHM8x7lj7JroZNP5Zqr0C?usp=sharing" target="_blank">
                               <img src="./img/gdrive-folder-icon.png">
                               <div class="asset-label">
@@ -176,7 +188,7 @@
                               <label>Drive Folder</label>
                               </a>
                               <p>
-                                 May contain additional assets in differnt formats
+                                 Contains additional assets in differnt formats, check it for more details
                               </p>
                            </div>
                         </div>
