fixing broken link

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                               </p>
                            </div>
                            <div class="asset">
-                              <a href="./https://www.printables.com/model/504670-squirtle-community-day-classic-coin" target="_blank">
+                              <a href="https://www.printables.com/model/504670-squirtle-community-day-classic-coin" target="_blank">
                               <img src="./assets/2023/2023-07-09-community-day-classic/Slicer Preview.png">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Label">
