--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
    <head>
       <!-- Google tag (gtag.js) -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-N4L70HLJN0"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PL3Z2R8T5"></script>
       <script>
-         window.dataLayer = window.dataLayer || [];
-         function gtag(){dataLayer.push(arguments);}
-         gtag('js', new Date());
-         
-         gtag('config', 'G-N4L70HLJN0');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5PL3Z2R8T5');
       </script>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
